--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@storybook/addon-links": "^5.3.12",
     "@storybook/addons": "^5.3.12",
     "@storybook/preset-create-react-app": "^1.5.2",
-    "@storybook/react": "^5.3.12"
+    "@storybook/react": "^5.3.12",
+    "react-styleguidist": "^10.6.1"
   }
 }
