Removed styleguidist. Sticking with Storybook

--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@storybook/addon-links": "^5.3.13",
     "@storybook/addons": "^5.3.13",
     "@storybook/preset-create-react-app": "^1.5.2",
-    "@storybook/react": "^5.3.13",
-    "react-styleguidist": "^10.6.2"
+    "@storybook/react": "^5.3.13"
   }
 }
